# cdbg

./: .clang-format  .clang-tidy  .clangd  .gitignore  CDebugging.c  CDebugging.h  CDebugging.ninja  CMakeLists.txt  LICENSE  Makefile  README.txt  cdbg.c  cdbg.h  cdbg.ninja  cdbg_elf.ninja  cdbg_pe.ninja  readme.txt
include/: cdbg.h  clog.h
src/: cdbg.c  clog.c
